(env
 (dev
  (flags
   (:standard -w -3-9-32-33-27-39))))

(library
 (name lambda_demo)
 (modules lambda)
 (libraries Pattern0)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name list_demo)
 (modules mylist)
 (libraries Pattern0)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name Pattern0)
 (modules Pattern0)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))
